Fixed null issue and spacing issues.

--- a/app/code/Gradus/TechSpecs/view/adminhtml/web/css/techspec.css
+++ b/app/code/Gradus/TechSpecs/view/adminhtml/web/css/techspec.css
@@ -32,7 +32,8 @@
 }
 .specs_row {
     border-bottom:1px solid;
-    margin-bottom:10px;
+    padding-bottom:13px;
+    padding-top:13px;
     margin-left:35px;
 }
 .specs_row label {
